--- a/paginas/css/master.css
+++ b/paginas/css/master.css
@@ -7,22 +7,25 @@ body{
   background-position: center;
   background-size: cover;
 }
-div{
+div, .logo > *{
   display: inline-block;
+}
+.logo{
+  width: 100%;
+  margin-bottom: 25px;
 }
 .login{
   margin-left: 35%;
   margin-top: 5%;
-  padding: 0px 30px 0px 30px;
-  width: 350px;
-  height: 290px;
+  padding: 20px 30px 0px 30px;
+  width: 370px;
+  height: 320px;
   background-color: #F2EEEE;
   border-top: 5px solid #E56F6F;
 }
 input{
   width: 100%;
   height: 40px;
-  margin-bottom: 20px;
   border: 1px solid #ccc;
   outline: none;
   font-size: 14px;
@@ -44,10 +47,12 @@ input:active, input:focus {
   color: white;
   text-transform: uppercase;
 }
+input:not(#submit){
+  margin-bottom: 20px;
+}
 h1{
   position: relative;
   font-size: 30px;
   text-align: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin: 0px 0px 0px 30px;
 }
