--- a/paginas/css/master.css
+++ b/paginas/css/master.css
@@ -3,9 +3,13 @@
   font-family: 'Varela Round';
 }
 body{
-  background: url('img/wallpaper.jpg');
+  background: url('img/wallpaper.jpg') center center no-repeat fixed;
   background-position: center;
   background-size: cover;
+/*   -webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover; */
 }
 div, .logo > *{
   display: inline-block;
@@ -30,7 +34,7 @@ input{
   outline: none;
   font-size: 14px;
 }
-#email, #senha{
+#campo{
   padding-left: 10px;
 }
 .login, input{
@@ -60,4 +64,27 @@ h1{
 p, a{
   text-align: center;
   text-decoration: none;
+}
+.loginCadastro{
+  margin-left: 22%;
+  margin-top: 5%;
+  padding: 20px 30px 0px 30px;
+  width: 480px;
+  height: 1330px;
+  background-color: #F2EEEE;
+  border-top: 5px solid #E56F6F;
+}
+#selecionarStatus{
+  width: 480px;
+  height: 35px;
+  padding-left: 10px; 
+}
+#uploadImagem{
+  width: 480px;
+  height: 40px;
+  padding: 5px 60px;
+  font-size: 17px;
+}
+#centralizarTexto{
+  text-align: center;
 }
