desfazendo uns erros q comeeti

--- a/paginas/css/master.css
+++ b/paginas/css/master.css
@@ -6,10 +6,10 @@ body{
   background: url('img/wallpaper.jpg') center center no-repeat fixed;
   background-position: center;
   background-size: cover;
-/*   -webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover; */
+/*-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; */
 }
 div, .logo > *{
   display: inline-block;
@@ -51,7 +51,7 @@ input:active, input:focus {
   color: white;
   text-transform: uppercase;
 }
-input:not(#submit){
+input:not(.submit){
   margin-bottom: 20px;
 }
 h1{
