--- a/paginas/css/cadastro.css
+++ b/paginas/css/cadastro.css
@@ -47,30 +47,32 @@ h1{
   text-align: center;
   margin: 0px 0px 0px 30px;
 }
-
 p, a{
   text-align: center;
   text-decoration: none;
 }
 .loginCadastro{
-  margin-left: 7%;
+  margin-left: 5%;
   margin-top: 2%;
   padding: 15px 20px 0px 25px;
-  width: 860px;
-  height: 1043px;
+  width: 90%;
   background-color: #F2EEEE;
   border-top: 5px solid #E56F6F;
 }
+.imp{
+  width: 20% !important;
+  margin-top: 20px !important;
+}
 #selecionarStatus{
-  width: 242px;
-  height: 35px;
-  padding-left: 10px; 
+  width: 100%;
+  height: 40px;
+  border: 1px solid #ccc;
+  outline: none;
+  font-size: 14px;
 }
 #uploadImagem{
-  width: 242px;
-  height: 40px;
-  padding: 5px 50px;
-  font-size: 17px;
+  padding: 7px 0px;
+  font-size: 15px;
 }
 #centralizarTexto{
   text-align: center;
