--- a/paginas/css/cadastro.css
+++ b/paginas/css/cadastro.css
@@ -63,7 +63,7 @@ p, a{
   width: 20% !important;
   margin-top: 20px !important;
 }
-#selecionarStatus{
+select{
   width: 100%;
   height: 40px;
   border: 1px solid #ccc;
