--- a/paginas/css/search.css
+++ b/paginas/css/search.css
@@ -6,7 +6,7 @@ body{
  	background-size: cover;
  	
 }
-.container{
+.main{
 	background-color: #F2EEEE;
 	border-top: 5px solid #E56F6F;
 	border-bottom: 5px solid #E56F6F;
